dataset1235/2025-2/2318198438/users/1240871306/executions/2601575092_2149359571.log
== SUBMISSION (2025-08-30 20:18:41)
-- CODE: 
Heráclito = 55
Fredegunda = x
print(Heráclito + Fredegunda == 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:25:19)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda == total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:19:26)
-- CODE: 
Heráclito = 55
Fredegunda = x
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:20:38)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:21:53)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:26:23)
-- CODE: 
Heráclito = 55
Fredegunda = 35
total = 90 
print(Heráclito + Fredegunda total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda total)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda total)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:51:00)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90
print(Heráclito - Fredegunda == total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:24:02)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda = total0)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total0)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total0)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:35:59)
-- CODE: 
conta total = 90
Heráclito = 55
Fredegunda = 90 - 55
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:24:34)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda = total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:42:02)
-- CODE: 
Heráclito = 55
Fredegunda = 55 - x
total = 90
print(Heráclito - Fredegunda = total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda = total )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda = total )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:54:21)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90
print(Heráclito - Fredegunda "=="total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda "=="total )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda "=="total )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:19:49)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 04:51:38)
-- CODE: 
conta_total = 90 
pago_Heráclito = 55
pago_Heráclito = conta_total - pago_Heráclito
print("Heráculo deve pagar" , pago_Heráclito  )

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Heráculo deve pagar 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Heráculo deve pagar 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:39:52)
-- CODE: 
total = 90
Heráclito = 55
Fredegunda = 90 - 55
print(Heráclito - Fredegunda = total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda = total )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda = total )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-31 04:56:42)
-- CODE: 
conta_total = 90 
pago_Heráclito = 55
pago_Fredegundo = conta_total - pago_Heráclito
print("Fredegundo deve pagar" , pago_Fredegundo  )

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
Fredegundo deve pagar 35
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
Fredegundo deve pagar 35
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:19:22)
-- CODE: 
Heráclito = 55
Fredegunda = x
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 3
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:43:29)
-- CODE: 
Heráclito ""=="" 55
Fredegunda "==" x
total = 90
print(Heráclito - Fredegunda = total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heráclito ""=="" 55
              ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heráclito ""=="" 55
              ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:21:54)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:19:50)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:31:24)
-- CODE: 
conta  total = 90
Heráclito = 55
Fredegunda = x 
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta  total = 90
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta  total = 90
           ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:36:01)
-- CODE: 
conta total = 90
Heráclito = 55
Fredegunda = 90 - 55
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:36:47)
-- CODE: 
conta total = 90
Heráclito = 55
Fredegunda = 90 - 55
print(Heráclito - Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:22:57)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:35:47)
-- CODE: 
conta total = 90
Heráclito = 55
Fredegunda = 90 - 35 
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:22:53)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-30 20:18:40)
-- CODE: 
Heráclito = 55
Fredegunda = x
print(Heráclito + Fredegunda == 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Fredegunda = x
                 ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:20:41)
-- CODE: 
Heráclito = 55
Fredegunda = x
Heráclito + Fredegunda
print(Heráclito + Fredegunda = 90 )

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = 90 )
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:35:48)
-- CODE: 
conta total = 90
Heráclito = 55
Fredegunda = 90 - 35 
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta total = 90
          ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:27:05)
-- CODE: 
Heráclito = 55
Fredegunda = 35
print(Heráclito + Fredegunda )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
90
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:43:50)
-- CODE: 
Heráclito ""=="" 55
Fredegunda "==" x
total "==" 90
print(Heráclito - Fredegunda = total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heráclito ""=="" 55
              ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    Heráclito ""=="" 55
              ^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:24:07)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90 
print(Heráclito + Fredegunda = total0)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total0)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito + Fredegunda = total0)
          ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expression cannot contain assignment, perhaps you meant "=="?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:57:18)
-- CODE: 
Heráclito = 55
Fredegunda = x
total = 90
print(Heráclito - Fredegunda "=="total )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda "=="total )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 4
    print(Heráclito - Fredegunda "=="total )
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:26:33)
-- CODE: 
Heráclito = 55
Fredegunda = 35
total = 90 
print(Heráclito + Fredegunda )
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
---- user output:
90
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
---- user output:
90
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-30 20:31:28)
-- CODE: 
conta  total = 90
Heráclito = 55
Fredegunda = x 
print(Heráclito + Fredegunda = conta total)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta  total = 90
           ^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
35
-- ERROR:
File "XXXX", line 1
    conta  total = 90
           ^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
